# traceroot-py

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_auto_instrumentation.py  test_core_sdk.py  test_integration_smoothness.py  test_otel.py  test_serialize.py  test_span_processor_path.py
traceroot/: __init__.py  client.py  constants.py  decorators.py  env.py  git_context.py  update.py  utils.py
traceroot/instrumentation/: __init__.py  registry.py
traceroot/transport/: span_processor.py
