[project]
name = "traceroot"
version = "0.1.1"
description = "Python SDK for TraceRoot"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "TraceRoot Team"},
]
keywords = ["observability", "llm", "tracing", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "opentelemetry-api>=1.35.0,<2.0",
    "opentelemetry-sdk>=1.35.0,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.35.0,<2.0",
    "openinference-instrumentation>=0.1.40,<1.0",
    "openinference-instrumentation-openai>=0.1.40,<1.0",
    "openinference-instrumentation-anthropic>=1.0.0,<2.0",
    "openinference-instrumentation-langchain>=0.1.50,<1.0",
    "openinference-instrumentation-google-genai>=0.1.14,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "respx>=0.20",
    "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://traceroot.ai/"
Documentation = "https://docs.traceroot.ai"
Repository = "https://github.com/traceroot-ai/traceroot-py"
"Bug Reports" = "https://github.com/traceroot-ai/traceroot-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["traceroot"]

[tool.hatch.build.targets.sdist]
include = ["traceroot"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["traceroot"]
branch = true

[tool.coverage.report]
show_missing = true
sort = "cover"
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line-too-long (formatter handles this)
    "B008",    # function-call-in-default-argument
    "B905",    # zip-without-explicit-strict
    "N811",    # constant-imported-as-non-constant (SDK_VERSION as __version__)
    "RUF005",  # collection-literal-concatenation
    "RUF022",  # unsorted-all (__all__ grouped by category)
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM105",  # suppressible-exception
]

[tool.ruff.lint.isort]
known-first-party = ["traceroot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
